--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -15,10 +15,20 @@ body {
 }
 
 img {
+    position: absolute;
     width: 100px;
     height: 90px;
     margin-top: 28px;
-    padding-left: 10px;
+    padding-left: 10px;    
+}
+
+
+.virada {
+    transform:rotateY(180deg);       
+}
+
+.escondido {
+    display: none;        
 }
 
 .conteudo {
@@ -34,6 +44,7 @@ ul {
 }
 
 li {
+    position: relative;
     width: 117px;
     height: 146px;
     background: #A7E9AF;
@@ -41,7 +52,9 @@ li {
     border-radius: 5px; 
     margin-left: 35px;
     margin-right: 35px; 
-    margin-bottom: 35px;   
+    margin-bottom: 35px; 
+    transition: transform 1s;      
+    transform-style: preserve-3d;
 }
 
 @media (max-width: 700px) {
